svg icon component

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -32,6 +32,17 @@
             const persisted = localStorage.getItem('appTheme');
             if (persisted) document.documentElement.setAttribute('data-bs-theme', persisted);
         } catch (_) { }
+
+        // fetch text file (e.g., an SVG) within the WebView
+        window.fetchText = async function (path) {
+            try {
+                const res = await fetch(path, { cache: 'force-cache' });
+                if (!res.ok) return null;
+                return await res.text();
+            } catch {
+                return null;
+            }
+        };
     </script>
 
     <div id="blazor-error-ui">
