--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,6 +7,8 @@
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="Calendrier.styles.css" />
     <link rel="icon" href="data:,">
 </head>
